--- a/Store.html
+++ b/Store.html
@@ -52,7 +52,7 @@
 
   <div class="container position-relative text-center">
           <header class="position-relative text-center text-white mb-5 ">
-                  <img src="cars(product)/bm_serie8pic.jpg" class="w-100 " alt="Banner">
+                  <img src="bm_serie8pic.jpg" class="w-100 " alt="Banner">
                   <div class=" position-absolute top-50 start-50 translate-middle-x px-3">
                   <h1 class="display-4"> New BMW serie8</h1>
                     <a href="product.html" class="btn btn-primary"> Buy Now </a>
@@ -66,7 +66,7 @@
             <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5" id="now">
                 <div class="card m-2">
                   <a href="product.html">
-                    <img src="cars(product)/11.webp" class="card-img-top" height="200" alt="product" >
+                    <img src="11.webp" class="card-img-top" height="200" alt="product" >
                   </a>
                       <div class="card-body">
                             <p class="card-text fw-bold">
@@ -84,7 +84,7 @@
 
                 <div class="card m-2">
                   <a href="product.html">
-                    <img src="cars(product)/22.webp" class="card-img-top" height="200" alt="product" >
+                    <img src="22.webp" class="card-img-top" height="200" alt="product" >
                   </a>
                       <div class="card-body">
                             <p class="card-text fw-bold">
@@ -105,7 +105,7 @@
 
                 <div class="card m-2">
                   <a href="product.html">
-                    <img src="cars(product)/66.webp" class="card-img-top" height="200" alt="product" >
+                    <img src="66.webp" class="card-img-top" height="200" alt="product" >
                   </a>
                       <div class="card-body">
                             <p class="card-text fw-bold">
@@ -122,7 +122,7 @@
            </div>
 <div class="row text-start align-items-center gy-5 my-5">
         <div class="col-12 col-md-6">
-                <img src="cars(product)/ew.jpg" class=" verticale-mb blue">
+                <img src="ew.jpg" class=" verticale-mb blue">
         </div>
 
         <div class="col-12 col-md-6">
@@ -163,7 +163,7 @@
        </p>
   </div>
   <div class="col-12 col-md-6">
-    <img src="cars(product)/iew.jpg" class=" verticale-mb reda">
+    <img src="iew.jpg" class=" verticale-mb reda">
 </div>
 </div>
 
