--- a/product.html
+++ b/product.html
@@ -50,12 +50,12 @@
 
 <div class="row py-5 g-5 ">
       <div class="col-12 col-lg-6">
-              <img src="/websites/cars(product)/inside.jpg" class="m-1 w-100 sliderMainImage" data-bs-toggle="model" data-bs-target="#imageModel"/>
+              <img src="inside.jpg" class="m-1 w-100 sliderMainImage" data-bs-toggle="model" data-bs-target="#imageModel"/>
         
               <div>
-                    <img src="/websites/cars(product)/moteur.jpg" width="60" class="m-1 sliderThumb">
-                    <img src="/websites/cars(product)/jantes.jpg" width="60" class="m-1 sliderThumb">
-                    <img src="/websites/cars(product)/back.jpg" width="60" class="m-1 sliderThumb">
+                    <img src="moteur.jpg" width="60" class="m-1 sliderThumb">
+                    <img src="jantes.jpg" width="60" class="m-1 sliderThumb">
+                    <img src="back.jpg" width="60" class="m-1 sliderThumb">
                    </div>
       </div> 
       
