--- a/about-us.html
+++ b/about-us.html
@@ -48,8 +48,8 @@
 </nav>
 
 
-<img src="/websites/cars(product)/about.jpg" style="width: 750px; justify-content: center; align-self: center; display: inline-block;" >
-<img src="/websites/cars(product)/about.jpg" style="width: 750px; justify-content: center; align-self: center; display: inline-block;" >
+<img src="about.jpg" style="width: 750px; justify-content: center; align-self: center; display: inline-block;" >
+<img src="about.jpg" style="width: 750px; justify-content: center; align-self: center; display: inline-block;" >
 
 
 <div class="container">
